igt@xe_sriov_flr - fail - CRITICAL: Test assertion failure function populate_ggtt_pte_offsets CRITICAL: Failed assertion: vf_id >= 1 && vf_id <= num_vfs
(xe_sriov_flr:5477) CRITICAL: Test assertion failure function populate_ggtt_pte_offsets, file ../tests/intel/xe_sriov_flr.c:396:
(xe_sriov_flr:5477) CRITICAL: Failed assertion: vf_id >= 1 && vf_id <= num_vfs
Subtest flr-each-isolation failed.
**** DEBUG ****
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF0 ggtt range [0x7ff7e8-0x7ff7e8] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF2 ggtt range [0x7ff7f0-0x7ff7f0] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF1 ggtt range [0x7ff7f8-0x7ff7f8] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF4 ggtt range [0x7ff800-0x7ff800] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF7 ggtt range [0x7ff808-0x7ff808] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF3 ggtt range [0x7ff810-0x7ff810] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF5 ggtt range [0x7ff818-0x7ff818] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF3 ggtt range [0x7ff820-0x7ff820] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF1 ggtt range [0x7ff828-0x7ff828] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF7 ggtt range [0x7ff830-0x7ff830] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF1 ggtt range [0x7ff838-0x7ff838] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF5 ggtt range [0x7ff840-0x7ff848] num_ptes=2
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF6 ggtt range [0x7ff850-0x7ff850] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF4 ggtt range [0x7ff858-0x7ff858] num_ptes=1
(xe_sriov_flr:5477) xe/xe_sriov_provisioning-DEBUG: Found VF2 ggtt range [0x7ff860-0x7ff860] num_ptes=1```